# moonshine-rs

./: .gitignore  Cargo.toml  README.md
examples/: live_captions.rs  transcribe_file.rs
src/: audio.rs  error.rs  hub.rs  lib.rs  model.rs  tokenizer.rs
src/live/: capture.rs  mod.rs  vad.rs
