[package]
name = "moonshine-rs"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of Moonshine speech-to-text models"
license = "MIT"
repository = "https://github.com/usefulsensors/moonshine"
keywords = ["speech-to-text", "asr", "onnx", "machine-learning"]
categories = ["multimedia::audio", "science"]

[dependencies]
# ONNX Runtime
ort = "2.0.0-rc"

# Tokenization (HuggingFace tokenizers)
tokenizers = "0.21"

# Model downloading from HuggingFace Hub
hf-hub = "0.4"

# Tensor operations
ndarray = "0.17"

# Error handling
thiserror = "2"

# Audio processing
hound = "3.5"
rubato = "0.16"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Audio capture (native only)
cpal = "0.15"

[dev-dependencies]
anyhow = "1"

[features]
default = ["live"]
live = []

[[example]]
name = "transcribe_file"
path = "examples/transcribe_file.rs"

[[example]]
name = "live_captions"
path = "examples/live_captions.rs"
required-features = ["live"]
